3822B1FI1/1_gelu_omp/komshina_daria/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1FI1/1_gelu_omp/komshina_daria/gelu_omp.cpp: In function ‘std::vector<float> GeluOMP(const std::vector<float>&)’:
/home/crazyproger/sandbox/gpu-2025/3822B1FI1/1_gelu_omp/komshina_daria/gelu_omp.cpp:22:24: error: ‘expf’ is not a member of ‘std’; did you mean ‘exp2f’?
   22 |         float e = std::expf(2.0f * z);
      |                        ^~~~
      |                        exp2f
